2009-05-07
Version shown in http://blog.writelesscode.com/past/2009/5/7/netzke_intuitive_application_configuration_with_help_of_masquerading/